<resources>
    <string name="app_name">Bike Note</string>
    <string name="date">Data</string>
    <string name="mileage">Przebieg</string>
    <string name="added_liters">Litry dolane</string>
    <string name="tank_cost">Koszt tankowania</string>
    <string name="confirm">Zatwierdź</string>
    <string name="go_to_tank_form_button">Przejdź do tankowania</string>
    <string name="make">Marka</string>
    <string name="model">Model</string>
    <string name="color">Kolor</string>
    <string name="make_demo">Ducati</string>
    <string name="model_demo">Diavel</string>
    <string name="color_demo">Czarny</string>
    <string name="nowe_tankowanie">Nowe tankowanie</string>
    <string name="nowa_naprawa">Nowa \nnaprawa</string>
    <string name="nowa_kolizja">Nowa \nkolizja</string>
    <string name="new_repair">Nowa \nnaprawa</string>
    <string name="new_collision">Nowa \nkolizja</string>
    <string name="new_tankup">Dolej \npaliwa</string>
    <string name="new_bike">Nowy motocykl</string>
    <string name="Data">Data</string>
    <string name="is_this_master_bike">Czy to Twój główny motocykl?</string>

</resources>
