<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/greyColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/white">
    <TextView
        android:id="@+id/date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelTextViewStyle"
        android:text="@string/Data" />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:longClickable="false"
        android:focusable="false"
        style="@style/CommonEdittextStyle"
        android:inputType="date" />

    <TextView
        android:id="@+id/mileage_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelTextViewStyle"
        android:text="@string/mileage" />

    <EditText
        android:id="@+id/milage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/CommonEdittextStyle"
        android:inputType="number" />

    <TextView
        android:id="@+id/liters_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelTextViewStyle"
        android:text="@string/added_liters" />

    <EditText
        android:id="@+id/liters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        style="@style/CommonEdittextStyle"
        android:inputType="number" />

    <TextView
        android:id="@+id/cost_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LabelTextViewStyle"
        android:text="@string/tank_cost" />

    <EditText
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="CommonButton "

        android:text="@string/confirm" />
    </LinearLayout>
    </LinearLayout>