<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/auto_choose_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>




    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/greyColor"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/go_to_tank_form_button"
            android:layout_width="82dp"
            android:layout_height="91dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new_tankup"
            android:text="@string/new_tankup"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_repair_button"
            app:layout_constraintStart_toEndOf="@+id/go_to_collision_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/go_to_repair_button"
            android:layout_width="82dp"
            android:layout_height="91dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_repair"
            android:text="@string/new_repair"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/new_bike_button"
            app:layout_constraintStart_toEndOf="@+id/go_to_tank_form_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/go_to_collision_button"
            android:layout_width="82dp"
            android:layout_height="91dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="9dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_collision"
            android:text="@string/new_collision"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/go_to_tank_form_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/new_bike_button"
            android:layout_width="82dp"
            android:layout_height="91dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/ic_new_bike"
            android:text="@string/new_bike"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go_to_repair_button"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>




</LinearLayout>